--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -1049,20 +1049,20 @@
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
              var waktu = new Date();
-             subuh = setDateTime(waktu, "6:39 am");
-             //subuh = setDateTime(waktu, times.items[0].fajr);
+             //subuh = setDateTime(waktu, "6:39 am");
+             subuh = setDateTime(waktu, times.items[0].fajr);
              var waktu = new Date();
-             //dhuhr = setDateTime(waktu, times.items[0].dhuhr);
-             dhuhr = setDateTime(waktu, "6:40 am");
+             dhuhr = setDateTime(waktu, times.items[0].dhuhr);
+             //dhuhr = setDateTime(waktu, "6:40 am");
              var waktu = new Date();
-             //asr = setDateTimeAsr(waktu, times.items[0].asr);
-             asr = setDateTimeAsr(waktu, "6:41 am");
+             asr = setDateTimeAsr(waktu, times.items[0].asr);
+             //asr = setDateTimeAsr(waktu, "6:41 am");
              var waktu = new Date();
-             //maghrib = setDateTime(waktu, times.items[0].maghrib);
-             maghrib = setDateTime(waktu, "6:42 am");
+             maghrib = setDateTime(waktu, times.items[0].maghrib);
+             //maghrib = setDateTime(waktu, "6:42 am");
              var waktu = new Date();
-             //isha = setDateTime(waktu, times.items[0].isha);
-             isha = setDateTime(waktu, "6:43 am");
+             isha = setDateTime(waktu, times.items[0].isha);
+             //isha = setDateTime(waktu, "6:43 am");
 
              $('.subuh')
              .text(formatAMPM(subuh));
