--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -502,7 +502,7 @@
             //     sound: null
             // });
             cordova.plugins.notification.local.on("update", function(notification) {
-                alert("updated: " + notification.id);
+                //alert("updated: " + notification.id);
             });
         }
     </script>
@@ -706,7 +706,7 @@
               var now = new Date();
               if(waktu.getTime() > now.getTime())
               {
-                  alert(waktu);
+                  //alert(waktu);
 
                   if(!sound)
                     addNotification(notification_id, sholat, waktu);
@@ -716,7 +716,7 @@
               else
               {
                   var waktu = getDateTommorow(waktu);
-                  alert(waktu);
+                  //alert(waktu);
 
                   if(!sound)
                     addNotification(notification_id, sholat, waktu);
@@ -759,13 +759,13 @@
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
-                          alert(waktu);
+                          //alert(waktu);
                           updateNotificationSound(notification_id, sholat, waktu);
                       }
                       else
                       {
                           var waktu = getDateTommorow(waktu);
-                          alert(waktu);
+                          //alert(waktu);
 
                           updateNotificationSound(notification_id, sholat, waktu);
                       }
@@ -793,13 +793,13 @@
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
-                          alert(waktu);
+                          //alert(waktu);
                           updateNotificationSoundOff(notification_id, sholat, waktu);
                       }
                       else
                       {
                           var waktu = getDateTommorow(waktu);
-                          alert(waktu);
+                          //alert(waktu);
 
                           updateNotificationSoundOff(notification_id, sholat, waktu);
                       }
