add holiday packages

--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -63,17 +63,16 @@
         </div>
 
         <main class="mdl-layout__content main-padding">
+
             <div class="mdl-grid portfolio-max-width">
-                <!-- <div class="logo-box">
-                    <img class="logo-dreamtour" src="img/dream.png">
-                </div> -->
+
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <a href="paketRegular.html" style="text-decoration : none;">
+                    <a href="paketExclusive.html" style="text-decoration : none;">
                         <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text">Umrah Regular</h2>
+                            <h2 class="mdl-card__title-text">Umrah Exclusive</h2>
                         </div>
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" img/umrah-regular.jpg" border="0" alt="">
+                            <img class="article-image" src=" img/exclusive.jpg" border="0" alt="">
                         </div>
 
                         <!-- <div class="mdl-grid portfolio-copy">
@@ -83,15 +82,39 @@
                     </a>
                 </div>
             </div>
-            <div class="mdl-grid portfolio-max-width">
 
+            <div class="mdl-grid portfolio-max-width">
+                <!-- <div class="logo-box">
+                    <img class="logo-dreamtour" src="img/dream.png">
+                </div> -->
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <a href="paketExclusive.html" style="text-decoration : none;">
+                    <a href="paketRegular.html" style="text-decoration : none;">
                         <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text">Umrah Exclusive</h2>
+                            <h2 class="mdl-card__title-text">Umrah Exclusive Plus</h2>
                         </div>
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" img/umrah-plus.jpg" border="0" alt="">
+                            <img class="article-image" src=" img/exclusive_plus.jpg" border="0" alt="">
+                        </div>
+
+                        <!-- <div class="mdl-grid portfolio-copy">
+                            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+
+                        </div> -->
+                    </a>
+                </div>
+            </div>
+
+            <div class="mdl-grid portfolio-max-width">
+                <!-- <div class="logo-box">
+                    <img class="logo-dreamtour" src="img/dream.png">
+                </div> -->
+                <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <a href="paketRegular.html" style="text-decoration : none;">
+                        <div class="mdl-card__title">
+                            <h2 class="mdl-card__title-text">Holiday</h2>
+                        </div>
+                        <div class="mdl-card__media">
+                            <img class="article-image" src=" img/holiday.jpg" border="0" alt="">
                         </div>
 
                         <!-- <div class="mdl-grid portfolio-copy">
