--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -97,7 +97,7 @@
                     <div class="mdl-card__supporting-text">
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <input ng-model="data.email" class="mdl-textfield__input" type="text" id="Email">
-                            <label class="mdl-textfield__label" for="Email">Passport</label>
+                            <label class="mdl-textfield__label" for="Email">Username</label>
                         </div>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <input ng-model="data.password" class="mdl-textfield__input" type="password" id="Password">
