--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/paket.jpg" style="width:100%; height:100%;">
                         </a>
-                        <p style="color:white;">Paket Umroh</p>
+                        <p style="color:white;">Umrah Package</p>
                     </div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="list-doa.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
