menu paket holiday

--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -109,7 +109,7 @@
                     <img class="logo-dreamtour" src="img/dream.png">
                 </div> -->
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <a href="paketRegular.html" style="text-decoration : none;">
+                    <a href="paketHoliday.html" style="text-decoration : none;">
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text">Holiday</h2>
                         </div>
