--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -733,6 +733,7 @@
                   id:notification_id,
                   text: "Saatnya sholat " + sholat,
                   firstAt: date,
+                  every: "day",
                   led: "FF0000",
                   icon: "file://icon.png",
                   sound: null
@@ -745,6 +746,7 @@
                   id:notification_id,
                   text: "Saatnya sholat " + sholat,
                   firstAt: date,
+                  every: "day",
                   led: "FF0000",
                   icon: "file://icon.png",
                   sound: "file://mecca_56_22.mp3"
@@ -781,6 +783,7 @@
                     id:notification_id,
                     text: "Saatnya sholat " + sholat,
                     at: date,
+                    every: "day",
                     led: "FF0000",
                     icon: "file://icon.png",
                     sound: "file://mecca_56_22.mp3"
@@ -793,6 +796,7 @@
                     id:notification_id,
                     text: "Saatnya sholat " + sholat,
                     at: date,
+                    every: "day",
                     led: "FF0000",
                     icon: "file://icon.png",
                     sound: null
