--- a/www/doa-umroh.html
+++ b/www/doa-umroh.html
@@ -78,7 +78,7 @@
                         </a>
                     </td>
                     <td style="color:white; font-family: 'Roboto','Helvetica','Arial',sans-serif;">
-                        Home
+                        Back
                     </td>
                     <td>
                         <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.PNG">
