--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -73,7 +73,7 @@
                         </a>
                     </td>
                     <td style="color:white; font-family: 'Roboto','Helvetica','Arial',sans-serif;">
-                        Home
+                        Back
                     </td>
                     <td>
                         <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.PNG">
