--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
 -->
 <html lang="en">
 
+<!-- add comment -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
